# InfoTheoryGames

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Hangman.cabal  LICENSE  README.md  UI.glade  stack.yaml  words.txt
app/: Graphics.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: battleship.cpp  battleship.hpp  battleship_enum.cpp  battleship_randsample.cpp  gui.cpp  main.cpp
test_results/: board1_rc.txt  board2_rc.txt  hangman1.txt  hangman2.txt  hangman3.txt
theory-paper/: main.tex  preamb.tex  refs.bib
